feat(CMake): Update CMake Macros

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 #########################
+# Jetbrains Plugin
+
+GitLink.xml
+
+#########################
 # CMake
 CMakeLists.txt.user
 CMakeCache.txt
