--- a/InputSimulatorCpp/CMakeLists.txt
+++ b/InputSimulatorCpp/CMakeLists.txt
@@ -3,33 +3,52 @@ project(InputSimulatorCppLib)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(SOURCE_DIR "./src")
+set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
-# Linux X11(X.Org)
-if (UNIX AND NOT APPLE)
-    find_library(X_11 X11)
-    find_library(X_TST Xtst)
+option(INPUT_SIMULATOR_BUILD_STATIC_LIB "Build static library." OFF)
 
-    set(EXTRA_LIBS ${X_11} ${X_TST})
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+if (INPUT_SIMULATOR_BUILD_STATIC_LIB)
+    set(LIB_TYPE "STATIC")
+else ()
+    set(LIB_TYPE "SHARED")
 endif ()
+
+# Default Platform Name
+set(PLATFORM_NAME "Unknown")
+
+# Windows
+if (WIN32)
+    set(PLATFORM_NAME "Windows")
+
+    # find_library(USER_32 User32.Lib)
+
+    # set(EXTRA_LIBS ${USER_32})
+endif (WIN32)
 
 # Apple macOS
 if (APPLE)
+    set(PLATFORM_NAME "Windows")
+
     find_library(APP_SERVICES ApplicationServices)
     find_library(CARBON Carbon)
     find_library(CORE_FOUNDATION CoreFoundation)
 
     set(EXTRA_LIBS ${APP_SERVICES_LIBRARY} ${CARBON} ${CORE_FOUNDATION})
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
-endif ()
+endif (APPLE)
 
-# Windows
-if (WIN32)
-    # find_library(USER_32 User32.Lib)
+# Linux X11(X.Org)
+if (LINUX)
+    set(PLATFORM_NAME "Windows")
 
-    # set(EXTRA_LIBS ${USER_32})
-endif ()
+    find_library(X_11 X11)
+    find_library(X_TST Xtst)
+
+    set(EXTRA_LIBS ${X_11} ${X_TST})
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+endif (LINUX)
+
+message(STATUS "Platform: ${PLATFORM_NAME}")
 
 file(GLOB_RECURSE SOURCE_FILES
         "${SOURCE_DIR}/*.cpp"
@@ -50,9 +69,20 @@ target_link_libraries(XInputSimulator ${EXTRA_LIBS})
 
 # InputSimulatorCppLib library(This Project)
 add_library(
-        ${PROJECT_NAME} SHARED
+        ${PROJECT_NAME} ${LIB_TYPE}
 
         ./src/library.cpp
         ./src/library.hpp
 )
 target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})
+
+# Windows Extra Build Options
+if (WIN32)
+    if (MINGW)
+        set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
+    endif (MINGW)
+
+    if (MSVC)
+        set_target_properties(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "d")
+    endif (MSVC)
+endif (WIN32)
