--- a/InputSimulatorCpp/CMakeLists.txt
+++ b/InputSimulatorCpp/CMakeLists.txt
@@ -3,8 +3,9 @@
 
 cmake_minimum_required(VERSION 3.10)
 project(InputSimulatorCppLib VERSION 0.1.0 LANGUAGES CXX)
+set(NAME_CORE_LIB "InputSimulatorCore")
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 set(INPUT_SIMULATOR_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
@@ -12,8 +13,6 @@ set(INPUT_SIMULATOR_SOURCE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 #message(STATUS "Header Files: ${INPUT_SIMULATOR_INCLUDE_DIRS}")
 #message(STATUS "Source Files: ${INPUT_SIMULATOR_SOURCE_DIRS}")
-
-option(INPUT_SIMULATOR_BUILD_STATIC_LIB "Build static library." OFF)
 
 if (BUILD_SHARED_LIBS)
     set(LIB_TYPE "SHARED")
@@ -42,7 +41,7 @@ if (APPLE)
     find_library(CORE_FOUNDATION CoreFoundation)
 
     set(EXTRA_LIBS ${APP_SERVICES_LIBRARY} ${CARBON} ${CORE_FOUNDATION})
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 endif (APPLE)
 
 # Linux X11(X.Org)
@@ -53,7 +52,7 @@ if (LINUX)
     find_library(X_TST Xtst)
 
     set(EXTRA_LIBS ${X_11} ${X_TST})
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 endif (LINUX)
 
 message(STATUS "Platform: ${PLATFORM_NAME}")
@@ -80,23 +79,27 @@ target_link_libraries(XInputSimulator ${EXTRA_LIBS})
 
 # InputSimulatorCppLib library(This Project)
 add_library(
-        ${PROJECT_NAME} ${LIB_TYPE}
+        ${NAME_CORE_LIB} ${LIB_TYPE}
 
         ${SOURCE_FILES}
 )
-target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})
-target_include_directories(${PROJECT_NAME} PUBLIC ${INPUT_SIMULATOR_LIB_HEADER_DIR})
+target_link_libraries(${NAME_CORE_LIB} ${EXTRA_LIBS})
+target_include_directories(${NAME_CORE_LIB} PUBLIC ${INPUT_SIMULATOR_LIB_HEADER_DIR})
 
 # Windows Extra Build Options
-#if (WIN32)
-#    if (MINGW)
-#        set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
-#    endif (MINGW)
-#
-#    if (MSVC)
-#        set_target_properties(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "d")
-#    endif (MSVC)
-#endif (WIN32)
+if (WIN32)
+    if (MINGW)
+        # set_target_properties(${NAME_CORE_LIB} PROPERTIES PREFIX "")
+    endif (MINGW)
+
+    if (MSVC)
+        target_compile_options(${NAME_CORE_LIB} PRIVATE /utf-8)
+        # set_target_properties(${NAME_CORE_LIB} PROPERTIES DEBUG_POSTFIX "d")
+    endif (MSVC)
+endif (WIN32)
+
+install(TARGETS ${NAME_CORE_LIB} ARCHIVE DESTINATION lib LIBRARY DESTINATION lib RUNTIME DESTINATION bin)
+install(DIRECTORY ${INPUT_SIMULATOR_LIB_HEADER_DIR} DESTINATION include)
 
 set(CPACK_PACKAGE_NAME "InputSimulatorCppLib")
 set(CPACK_PACKAGE_VENDOR "Haomin Kong")
