--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,10 @@ project(InputSimulatorCpp)
 SET(CMAKE_PROJECT_HOMEPAGE_URL "https://github.com/a645162/InputSimulatorCpp")
 
 enable_language(CXX)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+option(BUILD_SHARED_LIBS "Build dynamic library." OFF)
 
 #set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 #set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
