--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # CMakeLists.txt
 # Author: Haomin Kong
 
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.5)
 
 project(InputSimulatorCpp)
 
@@ -15,12 +15,16 @@ option(BUILD_SHARED_LIBS "Build dynamic library." OFF)
 
 #set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 #set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
+#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/CMake")
-message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
+# message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
 
 include(CheckCMakeVersion)
 check_cmake_version()
 
 add_subdirectory(InputSimulatorCpp)
+#include(FindInputSimulator)
+
 add_subdirectory(Example)
